--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,73 @@
 @import 'vendors/reset.scss';
 * {
     box-sizing: border-box;
+    --gradient: linear-gradient(to right, #FEEC01,#77731E);
   }
   
   img {
     max-width: 100%;
   }
-  
+  body{
+    background-color: rgb(135, 203, 98);
+    position: relative;
+    padding: 5px;
+    border: solid 1rem;
+    border-image: var(--gradient)30;
+  }
+  header{
+    margin: 0 10px;
+    display: flex;
+    flex-direction: column;
+  }
+  .header_1{
+    justify-content: space-between;
+  }
+  .header_2,.header_1{
+    display: flex;
+    align-items: center;
+  }
+  .identity_evolution{
+    font-size: 12px;
+  }
+  .identity_name{
+    font-weight: bolder;
+    font-size: larger;
+  }
+  .identity_life{
+    color: red;
+  }
+  figure{
+    margin: 0 10px;
+  }
+  .appearance_image{
+    border: solid 0.3rem;
+    border-image: var(--gradient)30;
+  }
+  .appearance_details{
+    display: flex;
+    margin: 0 10px;
+    font-style: italic;
+    justify-content: center;
+    font-size: 12px;
+    background-image: var(--gradient);
+  }
+  section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 40px 10px;
+  }
+  .attack_cost{
+    display: flex;
+
+  }
+  .attack_details span{
+    font-weight: bold;
+    font-size: 18px;
+  }
+  .attack_des{
+    margin: 0 20px;
+  }
+  .attack_details{
+    font-size: smaller;
+  }
